--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,14 @@
 doctype html
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+	head
+		title=title
+		link(rel='stylesheet', href='/stylesheets/style.css')
+
+
+	body
+		block content
+	
+		script(type='text/javascript',src='/javascripts/lib/jquery-1.11.1.js')
+		script(type='text/javascript',src='/javascripts/lib/angular.js')
+		script(type='text/javascript',src='/javascripts/services.js')
+		script(type='text/javascript',src='/javascripts/controller.js')
