--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,10 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+	section(ng-app='usys',id='content')
+		div(ng-controller='urlCTRL',id='text')
+			span
+				| ULR to verify
+			input(type='text',placeholder='Insert your url',ng-model='url.text',ng-change='validate()')
+			span(class='error')
+				| Error
