file structure changed

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,5 +10,8 @@ html
 	
 		script(type='text/javascript',src='/javascripts/lib/jquery-1.11.1.js')
 		script(type='text/javascript',src='/javascripts/lib/angular.js')
+		script(type='text/javascript',src='/javascripts/lib/jsoncmp.js')
+		script(type='text/javascript',src='/javascripts/app.js')
+		script(type='text/javascript',src='/javascripts/services2.js')
 		script(type='text/javascript',src='/javascripts/services.js')
 		script(type='text/javascript',src='/javascripts/controller.js')
