--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,3 +12,4 @@ html
 		script(type='text/javascript',src='/javascripts/services/main.js')
 		script(type='text/javascript',src='/javascripts/services/cdnPackages.js')
 		script(type='text/javascript',src='/javascripts/controllers/url_crtl.js')
+		script(type='text/javascript',src='/javascripts/directives/directives.js')
