--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
 
 		script(type='text/javascript',src='/bower_components/jquery/dist/jquery.min.js')
 		script(type='text/javascript',src='/bower_components/angular/angular.min.js')
+		script(type='text/javascript',src='/bower_components/zeroclipboard/dist/ZeroClipboard.min.js')
 		script(type='text/javascript',src='/javascripts/app.js')
 		script(type='text/javascript',src='/javascripts/services/main.js')
 		script(type='text/javascript',src='/javascripts/services/cdnPackages.js')
