--- a/views/index.jade
+++ b/views/index.jade
@@ -23,6 +23,9 @@ block content
 			
 			div(class='code-container')
 				div(id='ccontainer-1')
+					div(class='path')
+						| Introduce your the path where your css files are placed in: 
+						input(type='text',ng-model='path.css',id='path-css',ng-change='pathc()')
 					div(id='codeHead',class='code')
 						| &lthead&gt
 						tag(ng-repeat='u in url',ng-show='u.type == ".css"')
@@ -32,6 +35,9 @@ block content
 						| Copy css to clipboard
 
 				div(id='ccontainer-2')
+					div(class='path')
+						| Introduce your the path where your js files are placed in: 
+						input(type='text',ng-model='path.js',id='path-js',ng-change='pathc()')
 					div(id='codeBody',class='code')
 						tag(ng-repeat='u in url',ng-show='u.type == ".js"')
 							| {{u.tag}}
@@ -47,9 +53,12 @@ block content
 					input(type='text',name='pkgSearch',ng-model='pkgs.name')
 					br
 					div(id='cdn-results')
-						span(id='cdnPkg',ng-repeat='pkg in as.results | filter:pkgs',class='pkg-item')
-							| Name: {{pkg.name}} - Url: {{pkg.latest}} - 
-							a(ng-click='cdnChose(pkg.latest)',href='',class='pkg-link')
+						div(id='cdnPkg',ng-repeat='pkg in as.results | filter:pkgs',class='pkg-item')
+							div(id='pkg-name')
+								| Name: {{pkg.name}} - 
+							div(id='pkg-url')
+								| Url: {{pkg.latest}} - 
+							a(ng-click='cdnChose(pkg.latest,pkg.name)',href='',class='pkg-link')
 								| Select
 							br
 					button(ng-click='cancel_cdn()')
