Jade template support done

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -103,3 +103,21 @@ a.pkg-link{
 	font-weight:bold;
 	display:none;
 }
+
+#wget-css{
+
+}
+
+#wget-js{
+
+}
+
+.wget{
+	background-color: rgb(104, 104, 104);
+	color: white;
+	padding: 4px 7px;
+}
+
+#wget-box{
+	width: 57%;
+}
