--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,10 @@ block content
 			div(class='inputs')
 				a(ng-click='template_s()',href='')
 					| Switch to {{template.opp}}
+				br
+				a(ng-click='path_changer()',href='')
+					| See {{local_remote.opp}}
+
 
 				section(ng-repeat='u in url',class='txtin')
 
