--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,14 @@ block content
 			| Gettag - 
 			span
 				| Start building your tag libraries with buttons bellow
+		div(id='footer')
+			| by 
+			a(id='vctr',href='http://vctr90.github.io')
+				| vctr90
+			|  - 
+			a(id='fork-me',href='https://github.com/vctr90/gettag')
+				| Fork me!
+
 		hr(class='style-one')
 	section(ng-app='usys',id='content')
 		div(ng-controller='urlCTRL',id='text')
