Replacing vctr url

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ block content
 				| Start building your tag libraries with buttons bellow
 		div(id='footer')
 			| by 
-			a(id='vctr',href='http://vctr90.github.io')
+			a(id='vctr',href='http://vctr90.herokuapp.com')
 				| vctr90
 			|  - 
 			a(id='fork-me',href='https://github.com/vctr90/gettag')
